--- a/01/day_01/Cargo.toml
+++ b/01/day_01/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "day_01"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-read_file =  {path = "../../lib/read_file"}
+read_file = {git = "ssh://skyline/git/read_file.git"}
+
