Updated libs to use public repository.

--- a/01/day_01/Cargo.toml
+++ b/01/day_01/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-read_file = {git = "ssh://skyline/git/read_file.git"}
+read_file = {git = "https://github.com/Atamisk/read_file.git"}
 
