--- a/02/day_02/Cargo.toml
+++ b/02/day_02/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-read_file = {git = "ssh://skyline/git/read_file.git"}
+read_file = {git = "https://github.com/Atamisk/read_file.git"}
